# component-ex-uol

./: .pre-commit-config.yaml  Dockerfile  README.md  pyproject.toml
.github/workflows/: push.yml
component_config/: component_long_description.md  component_short_description.md  configRowSchema.json  configSchema.json  configuration_description.md  documentationUrl.md  licenseUrl.md  sourceCodeUrl.md
component_config/sample-config/: config.json
docs/superpowers/: ex-uol-lifecycle.md
docs/superpowers/plans/: 2026-06-08-ex-uol.md
docs/superpowers/specs/: 2026-06-08-ex-uol-design.md  2026-06-22-probe-sync-action-design.md
scripts/: regenerate_expected.py  update_logs_json.py
src/: client.py  component.py  configuration.py  endpoints.py  flatten.py
tests/: test_client_auth.py  test_client_errors.py  test_client_pagination.py  test_client_ratelimit.py  test_column_filter.py  test_component.py  test_configuration.py  test_endpoints.py  test_flatten.py  test_incremental.py  test_streaming.py  test_sync_actions.py  test_typing.py
tests/functional/01_testConnection/source/data/: config.json  output_snapshot.json
tests/functional/02_listEndpoints/source/data/: config.json
tests/functional/03_full_load_contacts/source/data/: config.json  output_snapshot.json
tests/functional/03_listDateFields_with_fields/source/data/: config.json
tests/functional/04_full_load_sales_invoices/source/data/: config.json  output_snapshot.json
tests/functional/07_incremental_accounting_records/source/: set_up.py
tests/setup/: configs.json
(+160 files in other folders)
